Parse metadata identifiers as list or as map